manifests/heist-1.1.199.tgz-manifest.yaml
---
# Source: heist/templates/service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-heist-webhook
  labels:
    helm.sh/chart: heist-1.1.199
    app.kubernetes.io/name: heist
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.1.199"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/name: heist
    app.kubernetes.io/instance: my-release
---
# Source: heist/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-heist
  labels:
    helm.sh/chart: heist-1.1.199
    app.kubernetes.io/name: heist
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.1.199"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: heist
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heist
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-heist
      securityContext:
        {}
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: my-release-heist-tls
        - name: cache
          emptyDir: {}
      containers:
        - name: heist
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          command: [ /bin/heist ]
          args:
            - operator
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=127.0.0.1:8080
            - --leader-elect
          image: quay.io/youniqx/heist:v1.1.199
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
            - mountPath: /home/nonroot/.cache
              name: cache
              readOnly: false
            - mountPath: /.cache
              name: cache
              readOnly: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - heist
                    - key: app.kubernetes.io/instance
                      operator: In
                      values:
                        - my-release
                topologyKey: kubernetes.io/hostname
              weight: 100
---
# Source: heist/templates/hooks/web-hook-mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: heist-default-mutating
  labels:
    helm.sh/chart: heist-1.1.199
    app.kubernetes.io/name: heist
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.1.199"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: default/my-release-heist
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: my-release-heist-webhook
        namespace: default
        path: /mutate-pod-agent-injector
    failurePolicy: Fail
    name: vpods.heist.youniqx.com
    namespaceSelector:
      matchLabels:
        heist.youniqx.com/inject-agent: "true"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
---
# Source: heist/templates/hooks/web-hook-validating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: heist-default-validating
  labels:
    helm.sh/chart: heist-1.1.199
    app.kubernetes.io/name: heist
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.1.199"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: default/my-release-heist
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-heist-webhook
      namespace: default
      path: /validate-heist-youniqx-com-v1alpha1-vaultbinding
  failurePolicy: Fail
  name: vvaultbinding.heist.youniqx.com
  rules:
  - apiGroups:
    - heist.youniqx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vaultbindings
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-heist-webhook
      namespace: default
      path: /validate-heist-youniqx-com-v1alpha1-vaultcertificateauthority
  failurePolicy: Fail
  name: vvaultcertificateauthority.heist.youniqx.com
  rules:
  - apiGroups:
    - heist.youniqx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - vaultcertificateauthorities
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-heist-webhook
      namespace: default
      path: /validate-heist-youniqx-com-v1alpha1-vaultkvsecret
  failurePolicy: Fail
  name: vvaultkvsecret.heist.youniqx.com
  rules:
  - apiGroups:
    - heist.youniqx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - vaultkvsecrets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-heist-webhook
      namespace: default
      path: /validate-heist-youniqx-com-v1alpha1-vaultkvsecretengine
  failurePolicy: Fail
  name: vvaultkvsecretengine.heist.youniqx.com
  rules:
  - apiGroups:
    - heist.youniqx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - vaultkvsecretengines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-heist-webhook
      namespace: default
      path: /validate-heist-youniqx-com-v1alpha1-vaultsyncsecret
  failurePolicy: Fail
  name: vvaultsyncsecret.heist.youniqx.com
  rules:
  - apiGroups:
    - heist.youniqx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - vaultsyncsecrets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-heist-webhook
      namespace: default
      path: /validate-heist-youniqx-com-v1alpha1-vaulttransitengine
  failurePolicy: Fail
  name: vvaulttransitengine.heist.youniqx.com
  rules:
  - apiGroups:
    - heist.youniqx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - vaulttransitengines
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: my-release-heist-webhook
      namespace: default
      path: /validate-heist-youniqx-com-v1alpha1-vaulttransitkey
  failurePolicy: Fail
  name: vvaulttransitkey.heist.youniqx.com
  rules:
  - apiGroups:
    - heist.youniqx.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - vaulttransitkeys
  sideEffects: None
